my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:27:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   27 | main ()
      | ^
      | int
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:30:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   30 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:30:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:41:26: warning: signed shift result (0xF2340000000) requires 45 bits to represent, but 'int' only has 32 bits [-Wshift-overflow]
   41 |   if (ROR (i, shift1) != ROR (INT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:44:26: warning: signed shift result (0xF2340000000) requires 45 bits to represent, but 'int' only has 32 bits [-Wshift-overflow]
   44 |   if (ROR (i, SHIFT1) != ROR (INT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:47:26: warning: signed shift result (0xF2345678000000000000000) requires 93 bits to represent, but 'long' only has 64 bits [-Wshift-overflow]
   47 |   if (ROR (l, shift1) != ROR (LONG_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:50:26: warning: signed shift result (0xF2345678000000000000000) requires 93 bits to represent, but 'long' only has 64 bits [-Wshift-overflow]
   50 |   if (ROR (l, SHIFT1) != ROR (LONG_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:53:27: warning: signed shift result (0xF2345678ABCDEF0000000000000000) requires 121 bits to represent, but 'long long' only has 64 bits [-Wshift-overflow]
   53 |   if (ROR (ll, shift1) != ROR (LL_VALUE, SHIFT1))
      |                           ^~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:56:27: warning: signed shift result (0xF2345678ABCDEF0000000000000000) requires 121 bits to represent, but 'long long' only has 64 bits [-Wshift-overflow]
   56 |   if (ROR (ll, SHIFT1) != ROR (LL_VALUE, SHIFT1))
      |                           ^~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:95:27: warning: signed shift result (0xF2345678ABCDEF0000000000000000) requires 121 bits to represent, but 'long long' only has 64 bits [-Wshift-overflow]
   95 |   if (ROL (ll, shift2) != ROL (LL_VALUE, SHIFT2))
      |                           ^~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:8:24: note: expanded from macro 'ROL'
    8 | #define ROL(a,b) (((a) << (b)) | ((a) >> ((sizeof (a) * CHAR_BIT) - (b))))
      |                    ~~~ ^  ~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:98:27: warning: signed shift result (0xF2345678ABCDEF0000000000000000) requires 121 bits to represent, but 'long long' only has 64 bits [-Wshift-overflow]
   98 |   if (ROL (ll, SHIFT2) != ROL (LL_VALUE, SHIFT2))
      |                           ^~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:8:24: note: expanded from macro 'ROL'
    8 | #define ROL(a,b) (((a) << (b)) | ((a) >> ((sizeof (a) * CHAR_BIT) - (b))))
      |                    ~~~ ^  ~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:101:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  101 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:101:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:35:26: warning: shifting a negative signed value is undefined [-Wshift-negative-value]
   35 |   if (ROR (s, shift1) != ROR (SHORT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:38:26: warning: shifting a negative signed value is undefined [-Wshift-negative-value]
   38 |   if (ROR (s, SHIFT1) != ROR (SHORT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:7:39: note: expanded from macro 'ROR'
    7 | #define ROR(a,b) (((a) >> (b)) | ((a) << ((sizeof (a) * CHAR_BIT) - (b))))
      |                                   ~~~ ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:71:26: warning: shifting a negative signed value is undefined [-Wshift-negative-value]
   71 |   if (ROL (s, shift1) != ROL (SHORT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:8:24: note: expanded from macro 'ROL'
    8 | #define ROL(a,b) (((a) << (b)) | ((a) >> ((sizeof (a) * CHAR_BIT) - (b))))
      |                    ~~~ ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:74:26: warning: shifting a negative signed value is undefined [-Wshift-negative-value]
   74 |   if (ROL (s, SHIFT1) != ROL (SHORT_VALUE, SHIFT1))
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020508-3.c:8:24: note: expanded from macro 'ROL'
    8 | #define ROL(a,b) (((a) << (b)) | ((a) >> ((sizeof (a) * CHAR_BIT) - (b))))
      |                    ~~~ ^
12 warnings and 3 errors generated.
